# my_commercial_project2

./: pyproject.toml
data/: 2141 отчет.xlsx  2141-2143, часть 3.1, ЭОМшк,ЩСН, ЛЗК+.xlsx  config.py
src/: main.py  read_exel_files.py  utils.py
