[tool.poetry]
name = "my-commercial-project2"
version = "0.1.0"
description = ""
authors = ["denishudyakov <denis.hudyakov27@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.lint.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
mypy = "^1.8.0"
flake8 = "^7.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pandas = "^2.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
